Updated html file to include main.js as the script and fixed snesitivity analysis header

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
                     <!-- Bonus Sensitivity Section -->
                     <div class="sensitivity-section">
-                        <div class="sensitivity-title">Bonus "Sensitivity"</div>
+                        <div class="sensitivity-title">Sensitivity Analysis</div>
                         <div class="sensitivity-grid">
                             <div class="sensitivity-item">
                                 <div class="sensitivity-label">ROI Low</div>
@@ -317,6 +317,7 @@
         </div>
     </div>
 
-    <script src="calculator.js"></script>
+    <!-- Modular JavaScript files - main.js imports all other modules -->
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
