Handeled edge cases for input validation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <div class="input-group">
                                 <label>Monthly Appointments</label>
                                 <div class="input-wrapper">
-                                    <input type="number" id="monthlyAppointments" value="1000" min="0" max="1000000" onchange="trackValueChange(); calculate()">
+                                    <input type="number" id="monthlyAppointments" value="1000" min="0" max="1000000" step="1" onchange="trackValueChange(); calculate()">
                                 </div>
                             </div>
 
@@ -116,7 +116,7 @@
                             <div class="input-group">
                                 <label>Inbound Calls per Month</label>
                                 <div class="input-wrapper">
-                                    <input type="number" id="inboundCalls" value="1300" min="0" max="10000000" onchange="trackValueChange(); calculate()">
+                                    <input type="number" id="inboundCalls" value="1300" min="0" max="10000000" step="1" onchange="trackValueChange(); calculate()">
                                 </div>
                             </div>
 
@@ -131,7 +131,7 @@
                             <div class="input-group">
                                 <label>Capacity - Monthly Appointments</label>
                                 <div class="input-wrapper">
-                                    <input type="number" id="capacity" value="1200" min="0" max="1000000" onchange="trackValueChange(); calculate()">
+                                    <input type="number" id="capacity" value="1200" min="0" max="1000000" step="1" onchange="trackValueChange(); calculate()">
                                 </div>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                             <div class="input-group">
                                 <label>Front Desk Staff Count</label>
                                 <div class="input-wrapper">
-                                    <input type="number" id="staffCount" value="2" min="0" max="1000" onchange="trackValueChange(); calculate()">
+                                    <input type="number" id="staffCount" value="2" min="0" max="1000" step="1" onchange="trackValueChange(); calculate()">
                                 </div>
                             </div>
 
@@ -166,7 +166,7 @@
                             <div class="input-group">
                                 <label>Work Hours per FTE - Monthly</label>
                                 <div class="input-wrapper">
-                                    <input type="number" id="workHrsPerFTE" value="160" min="0" max="10000" onchange="trackValueChange(); calculate()">
+                                    <input type="number" id="workHrsPerFTE" value="160" min="0" max="10000" step="1" onchange="trackValueChange(); calculate()">
                                 </div>
                             </div>
                         </div>
